# ipfs-eth

./: Cargo.toml  README.md  rustfmt.toml  shell.nix
src/: eth.rs  ipfs.rs  lib.rs  main.rs
tests/: integration.rs
tests/assets/: contract.sol  keystore
