[package]
name = "ipfs-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.10" 
ethers = { version = "1", features = ["ethers-solc"] }
ipfs-api = { version = "0.17", features = ["with-hyper-rustls"], default-features = false }
secrecy = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
url = "2"